translation-tool/inputs/source_meta/objects/Bulk_Upload_File__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Populated only if Status__c = Error</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Not_Submitted_Location_Orders__c</fullName>
        <description>Apex Logic Formula to count total number of location orders in a given file where DSS_Order_ID = Null</description>
        <label>Not Submitted Location Orders</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rows_In_Error__c</fullName>
        <description>Indicate Total rows in the upload spreadsheet with validation failure</description>
        <label>Rows In Error</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_Location_Orders__c</fullName>
        <description>Apex Logic Formula to count total number of location orders in a given file where DSS_Order_ID = Not Null</description>
        <label>Submitted Location Orders</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rows__c</fullName>
        <description>Indicate Total rows in the upload spreadsheet</description>
        <label>Total Rows</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Provided_File_Name__c</fullName>
        <label>User Provided File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bulk Upload File</label>
    <nameField>
        <displayFormat>BUF-{0000000000}</displayFormat>
        <label>Bulk Upload File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Upload Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>